Fixed result and level bar, also enabled on mobile

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ progress {
     }
     progress::-webkit-progress-bar {
         border-radius: 8px;
-        background-color: var(--main-color);
+        background-color: var(--secondary-color);
     }
     progress::-webkit-progress-value {
         border-radius: 8px;
